# Customer-Support-Email-Agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FAISS_IMPLEMENTATION.md  FAISS_INTEGRATION.md  FAISS_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  UI_GUIDE.md  UI_SUMMARY.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
frontend/: app.js  index.html  styles.css
knowledge_base/: __init__.py  sample_data.txt
src/: __init__.py  main.py
src/api/: __init__.py  routes.py  test_routes.py  ui_routes.py
src/core/: config.py  logger.py
src/graph/: __init__.py  workflow.py
src/knowledge_base/: build_faiss_index.py  documents.py
src/nodes/: __init__.py  email_processor.py  email_sender.py  followup_scheduler.py  human_review_router.py  intent_classifier.py  knowledge_base_search.py  response_generator.py
src/prompts/: __init__.py  templates.py
src/schemas/: __init__.py  email.py
src/services/: email_service.py  email_store.py  faiss_service.py  llm_service.py
src/utils/: __init__.py  helpers.py
tests/: conftest.py  test_example.py  test_faiss_integration.py
